--- a/index.html
+++ b/index.html
@@ -209,15 +209,17 @@
 
 				<section>
 					<h2>You can implement versioning of your geospatial data using git*</h2>
-					<p class="fragment">*Caution, very beta</p>
+					<p>For example, try <a href="http://geogit.org/">Geogit</a></p>
+					<a class="image"><img class="center" src="./images/geogit.png" alt="geogit"></a>
+					<p class="fragment">*Caution, <b>very</b> beta</p>
 				</section>
 
 				<section>
-					<h2>You can find loads of free reference books</h2>
+					<h2>You can find loads of free reference material</h2>
 					<ul>
-						<li>Python</li>
-						<li>QGIS</li>
-						<li>Git</li>
+						<li><a href="https://github.com/revolunet/PythonBooks">Python</a></li>
+						<li><a href="https://github.com/qgis/QGIS-Training-Manual">QGIS</a></li>
+						<li><a href="https://github.com/progit/progit">Git</a></li>
 					</ul>
 				</section>
 
@@ -238,12 +240,12 @@
 
 				<section>
 					<h2>You can find presentation software that doesn't suck</h2>
-					<p>Such as Reveal.js or Big</p>
+					<p>Such as <a href="https://github.com/hakimel/reveal.js/">Reveal.js</a> or <a href="https://github.com/tmcw/big">Big</a></p>
 				</section>
 
 				<section>
 					<h2>"The most important social network"*</h2>
-					<p class="fragment">*Someone cool, influential, and important said this but I can't remember who</p>
+					<p class="fragment">*Someone cool, influential, and very important said this but I can't remember who</p>
 				</section>
 
 				<section>
@@ -259,7 +261,7 @@
 
 				<section>
 					<h2>Get your pen out again...</h2>
-					<p class="fragment">Find this talk on GitHub at:<a href="TODO">TODO</a></p>
+					<p class="fragment">Find this talk on GitHub at:<a href="http://archaeogeek.github.io/aging_githubtalk">http://archaeogeek.github.io/aging_githubtalk</a></p>
 				</section>
 
 				<section>
